--- a/assets/style.css
+++ b/assets/style.css
@@ -5,19 +5,21 @@ body{
 h1,h3{
   font-family: "Butcherman";
 }
+img{
+  width: 100%;
+}
 .big-big{
   font-size: 400%;
   margin-top: 50px;
   text-shadow: -2px -2px orange;
 }
 #hangman{
-  max-width: 500px;
+  max-width: 700px;
 }
 #game-over{
   display: none;
 }
 #guessing{
-  display: none;
 }
 #display{
   margin-top: -5px;
